// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputField Component matches snapshot for default variant 1`] = `
<div
  class="html-div x1ghz6dp x1717udv xet4sn1 x13zp6ng x78zum5 xdt5ytf x1us19tq x5yr21d xh8yej3"
  data-theme="dark"
>
  <div
    class="sc-bRKDuR sc-fhHczv iUcaPP fvDOQV"
  >
    <div
      class="sc-ggWZvA jlOnfN"
    >
      <div
        class="sc-jwTyAe hXRaZK"
      >
        <span
          class="sc-hjsuWn ebTJZm"
        >
          Label
        </span>
        <div
          class="sc-jJLAfE gttYtk"
        >
          <input
            class="sc-hwkwBN kEAjAa"
            data-testid="input-field"
            placeholder="Enter text"
            type="text"
            value="snapshot test"
          />
          <div
            class="sc-kNOymR iQIqLX"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`InputField Component matches snapshot for outline variant 1`] = `
<div
  class="html-div x1ghz6dp x1717udv xet4sn1 x13zp6ng x78zum5 xdt5ytf x1us19tq x5yr21d xh8yej3"
  data-theme="dark"
>
  <div
    class="sc-bRKDuR sc-hvigdm iUcaPP fYHaBr"
  >
    <div
      class="sc-ggWZvA jlOnfN"
    >
      <div
        class="sc-jwTyAe hXRaZK"
      >
        <span
          class="sc-hjsuWn ebTJZm"
        >
          Outline Label
        </span>
        <div
          class="sc-jJLAfE gttYtk"
        >
          <input
            class="sc-hwkwBN kEAjAa"
            data-testid="input-field"
            placeholder="Enter text"
            type="text"
            value="outline snapshot"
          />
          <div
            class="sc-kNOymR iQIqLX"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
